# magus

./: ChangeLog.md  LICENSE  Makefile  Procfile  README.md  magus.cabal  stack.yaml
src/: Magus.hs  Main.hs
src/Arcana/: Game.hs  RPS.hs
src/Arcana/Discord/: Command.hs
src/Arcana/RPS/: Discord.hs
src/Arcana/RPS/Discord/: Command.hs
src/Arcana/Truco/: Mazo.hs  Types.hs
src/Discord/: Reflex.hs
src/Discord/Reflex/: Command.hs
src/Magus/: Command.hs  Party.hs  RPS.hs  Truco.hs  Types.hs
src/Magus/RPS/: Base.hs  Command.hs
src/Magus/Truco/: Base.hs  Command.hs  Render.hs
