name:                magus
version:             0.1.1
synopsis:            General purpose Discord bot architectured with an FRP system.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Marco Toniut
maintainer:          marco.toniut@gmail.com
copyright:           2019 Marco Toniut
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2.0

executable magus
  main-is:             Main.hs
  other-modules:       Arcana.Game
                       Arcana.RPS
                       Arcana.Truco.Types
                       Discord.Reflex.Command
                       Discord.Reflex
                       Magus
                       Magus.Command
                       Magus.RPS
                       Magus.RPS.Base
                       Magus.RPS.Command
                       Magus.Truco
                       Magus.Truco.Base
                       Magus.Truco.Command
  -- other-extensions:    
  build-depends:       base
                     , aeson
                     , cond
                     , containers
                     , data-default
                     , dependent-sum
                     , discord-haskell
                     , either
                     , fixed-vector
                     , lens
                     , linear
                     , mtl
                     , primitive
                     , random
                     , ref-tf
                     , reflex
                     , reflex-basic-host
                     , stm
                     , text
                     , witherable
  hs-source-dirs:      src
  default-language:    Haskell2010
